Require 2.479.3 or newer